cmake_minimum_required(VERSION 3.26)
project(lab9_10)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(lab9_10
        main.cpp
        node.cpp
        node.h
        linked_list.cpp
        linked_list.h
        linked_list.h
        linked_list.h
        linked_list.h
        rms.h
        rms.cpp
        partialNode.h
        partialNode.cpp)
